[gd_scene load_steps=6 format=3 uid="uid://bshacrjb6jm2d"]

[ext_resource type="Script" path="res://main_menu/options_panel.gd" id="1_onxpq"]
[ext_resource type="Resource" uid="uid://bdli431qsm5pj" path="res://settings/window_constants.tres" id="2_5jmuj"]
[ext_resource type="LabelSettings" uid="uid://m7fmqhjh2d80" path="res://main_menu/options_label.tres" id="2_18t1j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ibqa5"]

[sub_resource type="ImageTexture" id="ImageTexture_ei3bi"]

[node name="OptionsPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ibqa5")
script = ExtResource("1_onxpq")
window_constants_resource = ExtResource("2_5jmuj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -92.0
offset_right = 105.5
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VisualsBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayModeContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/VisualsBoxContainer"]
layout_mode = 2

[node name="DisplayModeLabel" type="Label" parent="VBoxContainer/VBoxContainer/VisualsBoxContainer/DisplayModeContainer"]
layout_mode = 2
text = "Display Mode"
label_settings = ExtResource("2_18t1j")
horizontal_alignment = 1

[node name="DisplayModeOptionButton" type="OptionButton" parent="VBoxContainer/VBoxContainer/VisualsBoxContainer/DisplayModeContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_icons/arrow = SubResource("ImageTexture_ei3bi")
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="ResolutionContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/VisualsBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/VBoxContainer/VisualsBoxContainer/ResolutionContainer"]
layout_mode = 2
text = "Window Resolution"
label_settings = ExtResource("2_18t1j")
horizontal_alignment = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="VBoxContainer/VBoxContainer/VisualsBoxContainer/ResolutionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 6
popup/item_0/text = "320x240"
popup/item_1/text = "640x480"
popup/item_1/id = 1
popup/item_2/text = "960x720"
popup/item_2/id = 2
popup/item_3/text = "1280x960"
popup/item_3/id = 3
popup/item_4/text = "1600x1200"
popup/item_4/id = 4
popup/item_5/text = "1920x1440"
popup/item_5/id = 5

[node name="AudioBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MasterContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/AudioBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MasterLabel" type="Label" parent="VBoxContainer/VBoxContainer/AudioBoxContainer/MasterContainer"]
layout_mode = 2
text = "Master Volume"
label_settings = ExtResource("2_18t1j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/VBoxContainer/AudioBoxContainer/MasterContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="MusicContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/AudioBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MusicLabel" type="Label" parent="VBoxContainer/VBoxContainer/AudioBoxContainer/MusicContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = ExtResource("2_18t1j")
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/VBoxContainer/AudioBoxContainer/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="SoundContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/AudioBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SoundLabel" type="Label" parent="VBoxContainer/VBoxContainer/AudioBoxContainer/SoundContainer"]
layout_mode = 2
text = "Sound Effects Volume"
label_settings = ExtResource("2_18t1j")
horizontal_alignment = 1

[node name="SoundVolumeSlider" type="HSlider" parent="VBoxContainer/VBoxContainer/AudioBoxContainer/SoundContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="item_selected" from="VBoxContainer/VBoxContainer/VisualsBoxContainer/DisplayModeContainer/DisplayModeOptionButton" to="." method="_on_display_mode_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/VisualsBoxContainer/ResolutionContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/AudioBoxContainer/MasterContainer/MasterVolumeSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/AudioBoxContainer/MusicContainer/MusicVolumeSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/AudioBoxContainer/SoundContainer/SoundVolumeSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
